# test-binary-features-old

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: group.rs  indicators.rs  lib.rs  lib_test.rs  output.rs  output_test.rs  outputs.rs  run.rs  sequence_of_groups.rs  task.rs  unit_tests.rs
src/unit_tests/: README.md  group_tests.rs  indicators_tests.rs  output_tests.rs
