[package]
name = "test-binary-features"
version = "0.1.0"
edition = "2021"
rust-version = "1.57"
description = ""
license = "MIT"
repository = "https://github.com/scale-rs/test-binary-features"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
test-binary = "3.0.1"
thiserror = "1.0.48"
